Fixes textarea width overflow issue

--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ textarea {
     box-shadow: 4px 4px 10px rgba(0,0,0,0.06);
     height:150px;
     white-space: pre-wrap;
+
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 button {
